# KorsEngine-Trixel

./: CMakeLists.txt  README.md
Doc/: readme.html  whattodo.txt
Src/: camera.h  collision.cpp  collision.h  extern.h  init.cpp  init.h  input.cpp  input.h  legacy_gui.cpp  legacy_gui.h  scene.cpp  scene.h  screen.cpp  screen.h  test_gui.cpp  trixel.cpp  trixel.dev  trixel.h  trixelmath.cpp  trixelmath.h  world.cpp  world.h
Src/editor/: level_editor.cpp  level_editor.h
Src/effects/: particle_system.cpp  particle_system.h
Src/graphics/: lighting.cpp  lighting.h
Src/gui/: gui_renderer.cpp  gui_renderer.h  gui_system.cpp  gui_system.h
Src/optimization/: cpu_utils.cpp  cpu_utils.h  gpu_utils.cpp  gpu_utils.h
Src/physics/: physics_system.cpp  physics_system.h
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Trixel3DEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test_gui.vcxproj  test_gui.vcxproj.filters  trixel_engine.vcxproj  trixel_engine.vcxproj.filters
build2/trixel_engine.dir/Debug/trixel_engine.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
